新增安全提醒：registry 憑證應透過 secrets 傳入
更新 action.yml 及中英文 README 的參數說明，提醒使用者 registry-username 和 registry-password 必須透過 secrets 傳入，並說明 GHCR 可使用 github.actor 和 secrets.GITHUB_TOKEN

--- a/action.yml
+++ b/action.yml
@@ -21,10 +21,10 @@ inputs:
     required: false
     default: ""
   registry-username:
-    description: "Registry username"
+    description: "Registry username (⚠️ Always pass via secrets! For GHCR, use github.actor)"
     required: true
   registry-password:
-    description: "Registry password or access token"
+    description: "Registry password/token (⚠️ Always pass via secrets! For GHCR, use secrets.GITHUB_TOKEN)"
     required: true
 
 runs:
